--- a/apps/login-links.html
+++ b/apps/login-links.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<style type="text/css">
-
-	th.month {background-color: red; font-size:80%;}
-	td.day {text-align: center;}
-
-	</style>
-	<title>Affiliate, White Label and Job Opportunities | Breeasy.com</title>
-	<meta name="description" content="Earn commissions, license your own version of Breeasy - come work for us.">
-
+	<title>Login, Social CRM Free Trial, Free Invoicing App | Breeasy.com</title>
+	<meta name="description" content="Login in to your Breeasy App.">
 	<link rel="stylesheet" type="text/css" href="../css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="../css/base-min.css">
 	<link rel="stylesheet" type="text/css" href="../css/breeasy.css">
-	<link rel="canonical" href="http://www.breeasy.com/opportunities" />
-
+	<link rel="canonical" href="http://www.breeasy.com/apps" />	
 	</head>
 	<body>
     <div id="doc2"class="yui-t7">
     	<div id="app_header">
     	<a href="http://www.breeasy.com"><img src="../images/communicate_manage_grow.png" alt="small business productivity platform" width="400" height="53" /></a>
     	 	<div id="promo_links">
-    	 	
-    	 	<a href="http://www.breeasy.com/plans">Save 50% on All Breeasy For Business Plans</a>
+    	 	<a href="http://billing.breeasy.com">Bill Clients Free</a><br>
+    	 	<a href="http://app.breeasy.com">Get Things Done - Save Time and Money</a>
 
     		</div>
     	</div>
@@ -30,13 +22,14 @@
 		    <div id='navigation'>
 				<ol id="navlinks">
 					<li><a href="http://www.breeasy.com">Home</a></li>
-					<li><a href="../apps/index.html">Products</a></li>
+					<li><a href="index.html">Apps</a></li>
 					<li><a href="../plans/index.html">Plans and Pricing</a></li>
 					<li><a href="http://brze.me">Blog</a></li>
 					<li><a href="../articles/index.html">Articles</a></li>
-					<li><a href="index.html">Opportunities</a></li>
+					<li><a href="../opportunities/index.html">Opportunities</a></li>
 					<li><a href="../about.html">About Breeasy</a></li>
 					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
+					<li><a href="login-links.html">Login</a></li>
 					<li class="last"></li>
 					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
 					<li class="last"><a href="feed://brze.me/feed/"><img src="../images/feed-24x24.png" alt="rss" width="24" height="24" title="Subcribe to The Breeasy Blog" /></a>
@@ -45,39 +38,23 @@
 				</ul>
 				
 			</div>
-			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > Opportunities</div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > <a href="http://www.breeasy.com/apps/login-links.html">Login</a></div>
 		</div> <!-- hd -->
 		<div id='bd'>
-			<div class="yui-g">
-			<table>
-			<thead>
-			<tr>
-				<th class="month">MAY</th>
-			</tr>
-			</thead>
-
-			<tbody>
-						<tr>
-				<td class='day'>20</td>
-			</tr>
-			</tbody>
-			<table>
-			<thead>
-			<tr>
-				<th class="month">MAY</th><td>20</td><td>8:00 am</td>
-			</tr>
-			</thead>
-
-			</table>
-			<table>
-			<thead>
-			<tr>
-				<th class="month">MAY</th><td>1</td><td>8:00 am</td>
-			</tr>
-			</thead>
-
-			</table>
-
+			<div class="yui-gb">
+			<p>Use the links below to login to your favorite Breeasy app:</p>
+	    		<div class="yui-u first">
+	    			<h1>Breeasy for Small Business</h1>
+	    			<a href="http://app.breeasy.com/login">Breeasy for Business</a></div>
+	    		<div class="yui-u">
+	    			<h1>Breeasy Billing and Invoicing App</h1>
+	    			<a href="http://billing.breeasy.com/users/sign_in">Breeasy Billing App</a></p>
+		
+	    		</div>
+	    		<div class="yui-u">
+	    		<h1>Breeasy Affiliate Program</h1>
+	    		<a href="http://affiliate.breeasy.com/login">The Breeasy Affiliate Program</a>
+	    		</div>
 			</div>
 			<br>
 				<div id='ft' class="center">
