--- a/data-security-privacy.html
+++ b/data-security-privacy.html
@@ -23,14 +23,14 @@
 		    <div id='navigation'>
 				<ol id="navlinks">
 					<li><a href="http://www.breeasy.com">Home</a></li>
-					<li><a href="products/index.html">Products</a></li>
+					<li><a href="apps/index.html">Apps</a></li>
 					<li><a href="plans/index.html">Plans and Pricing</a></li>
 					<li><a href="http://brze.me">Blog</a></li>
 					<li><a href="articles/index.html">Articles</a></li>
 					<li><a href="opportunities/index.html">Opportunities</a></li>
 					<li><a href="about.html">About Breeasy</a></li>
 					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
-					<li><a href="products/login-links.html">Login</a></li>
+					<li><a href="apps/login-links.html">Login</a></li>
 					<li class="last"></li>
 					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
 					<li class="last"><a href="feed://brze.me/feed/"><img src="images/feed-24x24.png" alt="rss" width="24" height="24" title="Subcribe to The Breeasy Blog" /></a>
