--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title> CRM, Cash Management, Productivity, Small Business Management, GTD | Breeasy.com</title>
-	<meta name="description" content="Secure, social, and simple productivity apps that help small business manage people, cash and time.">
+	<title>Simple Apps designed exclusively for Freelancers, Consultants and Small Business | Breeasy.com</title>
+	<meta name="description" content="Secure, social, and simple productivity apps that help small business manage people, cash and time without breaking your budget.">
 	
 	<link rel="stylesheet" type="text/css" href="css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="css/base-min.css">
@@ -24,14 +24,14 @@
 		    <div id='navigation'>
 				<ol id="navlinks">
 					<li><a href="http://www.breeasy.com">Home</a></li>
-					<li><a href="products/index.html">Products</a></li>
+					<li><a href="apps/index.html">Apps</a></li>
 					<li><a href="plans/index.html">Plans and Pricing</a></li>
 					<li><a href="http://brze.me">Blog</a></li>
 					<li><a href="articles/index.html">Articles</a></li>
 					<li><a href="opportunities/index.html">Opportunities</a></li>
 					<li><a href="about.html">About Breeasy</a></li>
 					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
-					<li><a href="products/login-links.html">Login</a></li>
+					<li><a href="apps/login-links.html">Login</a></li>
 
 					
 					<li class="last"></li>
@@ -42,21 +42,21 @@
 				</ul>
 				
 			</div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a></div>
+
 		</div> <!-- hd -->
 		<div id='bd'>
 			<div class="yui-gd">
 	    		<div class="yui-u first">
-				<h1 id='first_col'>Save Time and Money</h1>
-				<p>Breeasy.com is a small business management platform that helps you run your business, keep your customers and suppliers happy, and manage your accounts receivable and cash.  Our applications, <a href="http://www.breeasy.com/products/breeasy-for-business">Breeasy for Business</a> and <a href="http://www.breeasy.com/products/breeasy-billing-center">The Breeasy Billing Center</a> are designed, priced, and supported by and for small business.
-				</p>
+				<h1 id='first_col'>Apps That Save Time and Money</h1>
+				<p>As a freelancer or independent consultant, you know that managing customers, clients, employees, and suppliers can take a big chunk your time and that running your small business is hard work.   Breeasy <em>makes it easy</em> to keep your clients, customers, and suppliers happy, and effectively manage your accounts receivable and cash.    Our apps, <a href="http://www.breeasy.com/apps/breeasy-for-business">Breeasy for Small Business</a> and the <a href="http://www.breeasy.com/apps/free-billing-app">Breeasy Billing App</a> are designed, priced, and supported exclusively for small businesses and are perfect for consultants, freelancers, developers, part-timers and start-ups.</p>
 				<ul class="features">
-					<li>Manage Clients, Suppliers, Customers, and Employees</li>
-					<li>Built for Small Business by a Small Business</li>
+					<li>Built for Freelancers and Consultants</li>
 					<li>Manage Cash and Accounts Receivable</li>
 					<li>Get Organized and Increase Productivity</li>
-					<li>Social CRM</li>
-					<li>Get Things Done</li>
-					<li>Community Driven</li>
+					<li>Social and Secure CRM</li>
+					<li>Painlessly Get Things Done</li>
+					<li>Perfect for Any Small Business</li>
 				</ul>
 		    	</div>
 	    		<div class="yui-u">
@@ -66,50 +66,27 @@
 			<div class="yui-gb">
 		        <div class="yui-u first">
 		        <h2 class='section_header' id='first_col'>Simple, Social, Secure</h2>
-		        <p id="first_col">Breeasy.com is the next generation suite of cloud based apps for managing your contacts, cash, employees, customers and suppliers.<br>
-		        Designed for small and home-based businesses by an <a href="http://www.breeasy.com/about.html">experienced and successful entrepreneur</a>,  Breeasy is featured-packed, inexpensive, and community driven.  It's been created for you, by someone just like you - not a bunch of middle managers at a multi-billion dollar corporation that have never been in your shoes.</p>
+		        <p id="first_col">Breeasy.com is the next generation suite of cloud powered apps for managing your contacts, cash, employees, customers and suppliers.<br>
+		        Designed for freelancers, consultants and small business by an <a href="http://www.breeasy.com/about.html">experienced and successful small business consultant and entrepreneur,</a> Breeasy is featured-packed, inexpensive, and community driven.  It's been created for you, by someone just like you - not a bunch of middle managers at a multi-billion dollar corporation that have never been in your shoes.</p>
 		       </div>
 
 		        <div class="yui-u">
-		       <h2 class='section_header' id='first_col'>It's Easy with Breeasy</h2>
-				<p id="first_col">As a small business owner, you know how busy your day can be.  We know too, we do it every day.  Breeasy helps us get control of the mountain of emails, calls, prospecting, billing, notes, and appointments.  Everything is now in one place, organized and trackable. And Breeasy can help you, too.  <a href="http://www.breeasy.com/products">Take a look at our apps</a>, and we invite you to give them a try and let us know what you think.</p>
-				<a href="http://www.breeasy.com/products/breeasy-billing-center">Invoicing and Billing</a> | <a href="http://www.breeasy.com/products/breeasy-for-business">Contacts, Calendars, Tasks</a>
-				</div>
+		       <h2 class='section_header' id='first_col'>It's <em>Easy</em> with Breeasy</h2>
+				<p id="first_col">As a small business, you know how busy your day can be.  We know too, we do it every day.  Breeasy helps us get control of the mountain of emails, calls, prospecting, billing, notes, and appointments.  Everything is now in one place, organized and trackable.  Breeasy can help you get in control, too.  Our <a href="http://www.breeasy.com/apps">productivity, CRM, billing, and time-tracking apps</a>, are available now and we invite you to give them a free try and be sure to let us know what you think.</p>
+								</div>
 				<div class="yui-u">
-				 <h2 class='section_header' id='first_col'>Recent Tweets</h2>
-				 <script charset="utf-8" src="http://widgets.twimg.com/j/2/widget.js"></script>
-					<script>
-					new TWTR.Widget({
-					  version: 2,
-					  type: 'profile',
-					  rpp: 2,
-					  interval: 30000,
-					  width: 250,
-					  height: 300,
-					  theme: {
-					    shell: {
-					      background: '#333333',
-					      color: '#ffffff'
-					    },
-					    tweets: {
-					      background: '#000000',
-					      color: '#ffffff',
-					      links: '#4aed05'
-					    }
-					  },
-					  features: {
-					    scrollbar: false,
-					    loop: false,
-					    live: false,
-					    behavior: 'all'
-					  }
-					}).render().setUser('EasyBreeasy').start();
-					</script>
-		        </div>
+				 <h2 class='section_header' id='first_col'>An App For Every Small Business</h2>
+				 <h3>- Free Billing and Invoicing App</h3>
+				 <h3>- Track Billable Time</h3>
+				  <a href="http://billing.breeasy.com/users/sign_up">Start getting paid faster!</a>
+				 <h2>Manage Contacts, Projects, and Time</h2>
+				 <h3>- Risk Free Trial - No CC needed</h3>
+				 <a href="http://app.breeasy.com/signup">Signup Now!</a>
+				</div>
 
 		    </div>
-<blockquote>"I designed and built Breeasy for Business because as a small business owner I couldn't find an app that met my needs. It needed to have a ton of features, be simple and easy to use, a strong community, and provide real value to its users both in utility and price.  I use it everyday."<br>
-- Tom 0., Founder, Breeasy.com - On why he created the <a href="http://www.breeasy.com/products/breeasy-for-business">small business management portal</a>.
+<blockquote>"I designed and built the Breeasy small business management and billing, time-tracking apps because as a small business owner and technology consultant, I couldn't find anything that met my needs.  So, I built them myself.  Foremost, they needed to have a ton of features, be simple and easy to use, a strong community, and provide real value to its users both in utility and price. Now, I use them everyday."<br>
+- Tom 0., Founder, Breeasy.com - On why he created the <a href="http://www.breeasy.com/apps/">inexpensive and simple business apps</a>.
 </blockquote>
 		    <br>
 			<div id='ft' class="center">
