--- a/old_text.html
+++ b/old_text.html
@@ -4,7 +4,7 @@
 			<h2>President/Partner Wanted</h2>
 			<p>Breeasy.com is looking for a business partner who can help get our new cloud-based, small business management platform to the next level.  The ideal candidate would:
 			<ul>
-			<li>Work Closely with <a href="http://www.breeasy.com/about.html">CEO/CTO</a> developing small business products and services</li>
+			<li>Work Closely with <a href="http://www.breeasy.com/about.html">CEO/CTO</a> developing small business apps and services</li>
 			<li>Create Marketing Parnterships</li>
 			<li>Hire and manage sales, affiliate, advertising and social media team members</li>
 			<li>Be Responsible for SEO/SEM</li>
