--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -15,7 +15,7 @@
     	<a href="http://www.breeasy.com"><img src="../images/communicate_manage_grow.png" alt="small business productivity platform" width="400" height="53" /></a>
     	 	<div id="promo_links">
     	 	
-    	 	<a href="http://www.breeasy.com/plans">Save 50% on All Breeasy For Business Plans</a>
+    	 	<a href="http://www.breeasy.com/plans">Save 50% on All Breeasy For Business Plans  Offer ends soon!</a>
 
     		</div>
     	</div>
@@ -23,14 +23,14 @@
 		    <div id='navigation'>
 				<ol id="navlinks">
 					<li><a href="http://www.breeasy.com">Home</a></li>
-					<li><a href="../products/index.html">Products</a></li>
+					<li><a href="../apps/index.html">Apps</a></li>
 					<li><a href="../plans/index.html">Plans and Pricing</a></li>
 					<li><a href="http://brze.me">Blog</a></li>
 					<li><a href="../articles/index.html">Articles</a></li>
 					<li><a href="index.html">Opportunities</a></li>
 					<li><a href="../about.html">About Breeasy</a></li>
 					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
-					<li><a href="../products/login-links.html">Login</a></li>
+					<li><a href="../apps/login-links.html">Login</a></li>
 					<li class="last"></li>
 					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="../images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
 					<li class="last"><a href="feed://brze.me/feed/"><img src="../images/feed-24x24.png" alt="rss" width="24" height="24" title="Subcribe to The Breeasy Blog" /></a>
@@ -39,7 +39,7 @@
 				</ul>
 				
 			</div>
-			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > Opportunities > Jump: <a href="#jobs">Jobs</a> <a href="#investment">Investment</a></div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > <a href="http://www.breeasy.com/opportunities" >Opportunities</a> > Jump: <a href="#jobs">Jobs</a> <a href="#investment">Investment</a></div>
 		</div> <!-- hd -->
 		<div id='bd'>
 			<div class="yui-g">
@@ -48,7 +48,7 @@
 			<h2 class='section_header'>Affiliate Program - Updated!</h2><p> Want to make some extra money referring Breeasy to your customers or advertise Breeasy on your website or newsletter? <a href="http://affiliate.breeasy.com/affiliate-home">Free Affiliate Program now available!</a>  You can earn commissions of up to 30% on new paid subscribers and 15% on renewals.  Some conditions apply.  See <a href="http://affiliate.breeasy.com/affiliate-home">Breeasy Affiliate Program </a> for details.</p>
 		
 		<h2 class='section_header'>White Label Progam</h2>
-		<p>Looking to run your own web business?  Do you have or manage an existing business and are looking to add additional products and services that add value to your current offerings?  White Label Breeasy could be your answer.</p>
+		<p>Looking to run your own web business?  Do you have or manage an existing business and are looking to add additional apps and services that add value to your current offerings?  White Label Breeasy could be your answer.</p>
 	        <ul class="features">
 	        <li>Unique Instance of Breeasy for Business (i.e. your-company.breeasy.com or www.yourdomain.com)</li>
 	        <li>Tier 2 support</li>
@@ -92,7 +92,7 @@
 		        <li>Earn up to 20% of cash revenues.</li>
 		        </ul>
 		        <h2 class='section_header'>White Label and Licensing Manager</h2>
-		        <p>Breeasy is also looking for an experienced sales professional to sell/license its white label product and services. This position can be virtual, but the ideal candidate will be in San Diego CA or Phoenix AZ.  The primary objective is to introduce and license breeasy white label to customers interested in our innovative, value-added, opportunity.  Ideal customers are country and regional licensees, affinity organizations and successful internet retailers that sell products and services to small business.  Secondarily, the ideal candidate will have experience in mail list referral programs.</p>
+		        <p>Breeasy is also looking for an experienced sales professional to sell/license its white label product and services. This position can be virtual, but the ideal candidate will be in San Diego CA or Phoenix AZ.  The primary objective is to introduce and license breeasy white label to customers interested in our innovative, value-added, opportunity.  Ideal customers are country and regional licensees, affinity organizations and successful internet retailers that sell apps and services to small business.  Secondarily, the ideal candidate will have experience in mail list referral programs.</p>
 		         <ul class="list">
 		       	<li>Use existing contacts and networks</li>
 		        <li>Develop Licensing, Sales and Marketing strategies</li>
