--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Small Business Management Portal | Breeasy.com</title>
+	<title>Business Apps, Small Business Management Platform| Breeasy.com</title>
 	<meta name="description" content="Founded by a successful small business owner, Breeasy.com is a small business platform and community.">
 	
 	<link rel="stylesheet" type="text/css" href="css/reset-fonts-grids.css">
@@ -23,14 +23,14 @@
 		    <div id='navigation'>
 				<ol id="navlinks">
 					<li><a href="http://www.breeasy.com">Home</a></li>
-					<li><a href="products/index.html">Products</a></li>
+					<li><a href="apps/index.html">Apps</a></li>
 					<li><a href="plans/index.html">Plans and Pricing</a></li>
 					<li><a href="http://brze.me">Blog</a></li>
 					<li><a href="articles/index.html">Articles</a></li>
 					<li><a href="opportunities/index.html">Opportunities</a></li>
 					<li><a href="about.html">About Breeasy</a></li>
 					<li><a href="https://breeasy.desk.com">Support Forum</a></li>
-					<li><a href="products/login-links.html">Login</a></li>
+					<li><a href="apps/login-links.html">Login</a></li>
 					<li class="last"></li>
 					<li class="last"><a href="https://twitter.com/#!/EasyBreeasy"><img src="images/twitter-24x24.jpg" alt="follow us on twitter" width="24" height="24" title="follow us on twitter" /></a>
 					<li class="last"><a href="feed://brze.me/feed/"><img src="images/feed-24x24.png" alt="rss" width="24" height="24" title="Subcribe to The Breeasy Blog" /></a>
@@ -39,21 +39,21 @@
 				</ul>
 				
 			</div>
-			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > About Breeasy</div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > <a href="http://www.breeasy.com/about.html">About Breeasy</a></div>
 		</div> <!-- hd -->
 		<div id="bd">
 		<div id="yui-main">
 			<div class="yui-b">
 				<div class="yui-g">
 				<h1>Small Business Focused</h1>
-				<p>Designed and built for small business by a small business, Breeasy.com the platform was created by Tom O'Brien after years of research and development.  Tired of CRM systems that didn't cater to or care about small business, he decided to build one that works for the rest of us. Now bringing Breeasy to market is his passion.  He is also the Co-Founder and Global COO of Data Insurance Licensing Ltd., a technology and insurance intermediary startup based in New Zealand.  An inventor with approved patents and patent applications throughout the world, He enjoys working with and consulting startups and small businesses around the world.  For additional details, please see his <a href="http://www.bootstraptechnology.com/about-bootstrap-technology.html">CV/Resume</a>.</p>
+				<p>Breeasy is a small business management platform, consisting of apps, forums, blog, and peers that can help your small business grow.  Designed and built for small business by a small business, Breeasy.com the platform was created by Tom O'Brien, a technology consultant, after years of research and development.  Tired of CRM and billing systems that didn't cater to or care about small business, he decided to build one that works for the rest of us. Now bringing Breeasy to market is his passion.  He is also the Co-Founder and Director of Data Insurance Licensing Ltd., a technology and insurance intermediary startup based in New Zealand.  An inventor with approved patents and patent applications throughout the world, He enjoys working with and consulting startups and small businesses around the world.  For additional details, please see his <a href="http://www.bootstraptechnology.com/about-bootstrap-technology.html">CV/Resume</a>.</p>
 				<h2>FeedBack</h2>
 				Importantly, we want to hear your <a href="https://breeasy.desk.com">feedback and listen to your suggestions</a> in our forums.
 				<h2>Contact Us</h2>
 				Got a question or some interest in Breeasy.com opportunities? Drop us a line and ask us:  <a href="http://contact.breeasy.com">How can we help?</a>.
 				<h2>The Breeasy Blog</h2>
-				Keep up with the latest on Breeasy apps, tips and tricks, trends in small business and user stories on <a href="http://www.brze.me">The Breeasy Blog</a>.
-				<h2>100% designed, built, and hosted in the USA. - Never outsourced.</h2>
+				Keep up with the latest on Breeasy apps, tips and tricks, trends in small business and user stories on <a href="http://www.brze.me">We Love Small Business</a>.
+				<h2>100% designed, coded, built, and hosted in the USA. - Never outsourced.</h2>
 				<h2>Follow us on Twitter</h2>
 				<a href="http://twitter.com/easybreeasy" class="twitter-follow-button" data-show-count="false">
 				
