--- a/scratchpad/radio_change.html
+++ b/scratchpad/radio_change.html
@@ -32,7 +32,7 @@
 		    <div id='navigation'>
 				<ol id="navlinks">
 					<li><a href="http://www.breeasy.com">Home</a></li>
-					<li><a href="../products/index.html">Products</a></li>
+					<li><a href="../apps/index.html">Products</a></li>
 					<li><a href="../plans/index.html">Plans and Pricing</a></li>
 					<li><a href="http://brze.me">Blog</a></li>
 					<li><a href="../articles/index.html">Articles</a></li>
