small changes committed

--- a/apps/index.html
+++ b/apps/index.html
@@ -44,7 +44,7 @@
 			<div class="yui-g">
 	    		<div class="yui-u first">
 	    			<h1>Save Time and Money - It's Easy with Breeasy!</h1>
-	    			<p><a href="http://www.breeasy.com/apps/breeasy-for-business/index.html">Breeasy for Business</a> is our flagship app that keeps you organized, efficient, and productive.  Simple and easy to use, you will notice improvements in your day-to-day work flow in no time.  Some things it can do for you are:</p>
+	    			<p><a href="http://www.breeasy.com/apps/breeasy-for-business/index.html">Breeasy for Small Business</a> is our flagship app that keeps you organized, efficient, and productive.  Simple and easy to use, you will notice improvements in your day-to-day work flow in no time.  Some things it can do for you are:</p>
 	    			<ul class="features">
 	    			<li>Manage Customers and Suppliers</li>
 	    			<li>CRM - Customer Relationship Management</li>
