changes to the sites

--- a/apps/breeasy-for-business/features/events.html
+++ b/apps/breeasy-for-business/features/events.html
@@ -35,7 +35,7 @@
 				</ul>
 				
 			</div>
-			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > <a href="http://www.breeasy.com/apps/index.html">Apps</a> > <a href="http://www.breeasy.com/apps/breeasy-for-business">Breeasy for Business</a> > <a href="http://www.breeasy.com/apps/breeasy-for-business/features/events.html">Events</a></div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > <a href="http://www.breeasy.com/apps/index.html">Apps</a> > <a href="http://www.breeasy.com/apps/breeasy-for-business">Breeasy for Small Business</a> > <a href="http://www.breeasy.com/apps/breeasy-for-business/features/events.html">Events</a></div>
 		</div> <!-- hd -->
 		<div id='bd'>
 	    	<div class="yui-g">
