--- a/apps/index.html
+++ b/apps/index.html
@@ -61,8 +61,8 @@
 					<p>See a complete list of Breeasy for Business features and how each one can <a href="http://www.breeasy.com/apps/breeasy-for-business">save you time and money</a>.<br>  The best way to see all that Breeasy for Business can do is to give it try with our <a href="http://app.breeasy.com/signup">Risk-Free Trial</a>.</p>
 				</div>
 	    		<div class="yui-u">
-	    			<h1>Free Billing, Invoicing, and Time Tracking App</h1>
-	    			<p>Sometimes, you just need to get an invoice or a bill immediately to your client, without any hassle.  That's where our <a href="http://www.breeasy.com/apps/free-billing-app/index.html">Free Billing, Invoicing, and Time Tracking App</a> can help.  Cloud based, free, and super simple, you can create invoices, track billable hours, record payments and keep track of your cash.</p>
+	    			<h1>Free Billing, Invoicing, and Time Tracker App</h1>
+	    			<p>Sometimes, you just need to get an invoice or a bill immediately to your client, without any hassle.  That's where our <a href="http://www.breeasy.com/apps/free-billing-app/index.html">Free Billing, Invoicing, and Time Tracker App</a> can help.  Cloud based, free, and super simple, you can create invoices, track billable hours, record payments and keep track of your cash.</p>
 	    			<ul class="features">
 	    			<li>Create and Email Invoices on the Fly</li>
 	    			<li>Manage Accounts Receivable</li>
