--- a/apps/login-links.html
+++ b/apps/login-links.html
@@ -45,15 +45,15 @@
 			<p>Use the links below to login to your favorite Breeasy app:</p>
 	    		<div class="yui-u first">
 	    			<h1>Breeasy for Small Business</h1>
-	    			<a href="http://app.breeasy.com/login">Breeasy for Business</a></div>
+	    			<a href="http://app.breeasy.com/login">Login</a></div>
 	    		<div class="yui-u">
-	    			<h1>Breeasy Billing and Invoicing App</h1>
-	    			<a href="http://billing.breeasy.com/users/sign_in">Breeasy Billing App</a></p>
+	    			<h1>Breeasy Billing, Invoicing, and Time Tracker App</h1>
+	    			<a href="http://billing.breeasy.com/users/sign_in">Login</a></p>
 		
 	    		</div>
 	    		<div class="yui-u">
 	    		<h1>Breeasy Affiliate Program</h1>
-	    		<a href="http://affiliate.breeasy.com/login">The Breeasy Affiliate Program</a>
+	    		<a href="http://affiliate.breeasy.com/login">Login</a>
 	    		</div>
 			</div>
 			<br>
