--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -45,7 +45,7 @@
 			<div class="yui-g">
 			<h1>Opportunities at Breeasy.com</h1>
 			
-			<h2 class='section_header'>Affiliate Program - Updated!</h2><p> Want to make some extra money referring Breeasy to your customers or advertise Breeasy on your website or newsletter? <a href="http://affiliate.breeasy.com/affiliate-home">Free Affiliate Program now available!</a>  You can earn commissions of up to 30% on new paid subscribers and 15% on renewals.  Some conditions apply.  See <a href="http://affiliate.breeasy.com/affiliate-home">Breeasy Affiliate Program </a> for details.</p>
+			<h2 class='section_header'>Earn with Breeasy!</h2><p> Want to make some extra money referring Breeasy to your customers or advertise Breeasy on your website or newsletter? <a href="http://affiliate.breeasy.com/affiliate-home">Free Affiliate Program now available!</a>  You can earn commissions of up to 40% on new paid subscribers and 30% on paid renewals.  Some conditions apply.  See <a href="http://affiliate.breeasy.com/affiliate-home">Breeasy Affiliate Program </a> for details.</p>
 		
 		<h2 class='section_header'>White Label Progam</h2>
 		<p>Looking to run your own web business?  Do you have or manage an existing business and are looking to add additional apps and services that add value to your current offerings?  White Label Breeasy could be your answer.</p>
