--- a/apps/breeasy-for-business/index.html
+++ b/apps/breeasy-for-business/index.html
@@ -37,7 +37,7 @@
 				</ul>
 				
 			</div>
-			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > <a href="http://www.breeasy.com/apps/index.html">Apps</a> > <a href="http://www.breeasy.com/apps/breeasy-for-business/">Breeasy for Business</a></div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > <a href="http://www.breeasy.com/apps/index.html">Apps</a> > <a href="http://www.breeasy.com/apps/breeasy-for-business/">Breeasy for Small Business</a></div>
 		</div> <!-- hd -->
 		<div id='bd'>
 			<div class="yui-gd">
