--- a/apps/free-billing-app/features/time-tracking.html
+++ b/apps/free-billing-app/features/time-tracking.html
@@ -43,7 +43,7 @@
 	    		<h1>Free, Painless Time Tracking</h1>
 	    		<p>New!  As a consultant, freelancer, or designer, invoicing can been a real pain.  You enter your time, categorize it, enter your hourly rate, and then <a href="http://www.breeasy.com/apps/free-billing-app/features/invoices.html">create an invoice on the fly</a>.  A key to managing cash is to invoice quicky, right after your services have been provided.   </p>
 	    		<h2>Manage Cash</h2>
-	    		<p>Like the other types of invoices you can create with the <a href="http://wwww.breeasy.com/apps/free-billing-app">Free Billing App</a>, Time Tracking is easy to use, works seamlessly with our invoicing engine, and lets you track payments, and accounts receivable.</p>
+	    		<p>Like the other types of invoices you can create with the <a href="http://www.breeasy.com/apps/free-billing-app/index.html">Free Billing App</a>, Time Tracking is easy to use, works seamlessly with our invoicing engine, and lets you track payments, and accounts receivable.</p>
 	    		<blockquote>"When I ever I start a project for a new client, I enter their details into the Billing and Invoicing App - then at the end of each day I enter my hours, provide a description, and hit save. Every Friday - I send out my invoices and my accounting is done!"<br>
 - IT Consultant
 </blockquote>
