--- a/apps/breeasy-for-business/index.html
+++ b/apps/breeasy-for-business/index.html
@@ -43,7 +43,7 @@
 			<div class="yui-gd">
 	    		<div class="yui-u first">
 	    		<h1>Connect with Customers without breaking your budget</h1>
-	    		<p>Running a small business takes all your heart, effort, and a ton of time. Managing customers, employees, consultants and contractors, and suppliers can chew up a big chunk of your day.  <a href="http://app.breeasy.com">Breeasy for Business</a> helps you get organized and puts all your communications, tasks, and to dos in one place - accessible from any internet connected device:  mobile, desktop, laptop, and tablet.</p>
+	    		<p>Running a small business takes all your heart, effort, and a ton of time. Managing customers, employees, consultants and contractors, and suppliers can chew up a big chunk of your day.  <a href="http://app.breeasy.com">Breeasy for Small Business</a> helps you get organized and puts all your communications, tasks, and to dos in one place - accessible from any internet connected device:  mobile, desktop, laptop, and tablet.</p>
 	    		<p>Breeasy for Business is loaded with a ton of features that can help get your small business organized, efficient, and increase profits.  For a limited time Breeasy for Business has an <a href="http://www.breeasy.com/plans/index.html">Early Bird Special</a>.</p>
 	    		</div>
 	    		<div class="yui-u">
