--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -44,10 +44,11 @@
 		<div id='bd'>
 			<div class="yui-g">
 			<h1>Opportunities at Breeasy.com</h1>
+			<h2 class='section_header'>Make Breeasy <em>Your</em> Small Business</h2><p>Looking for an interesting, simple, easy, and profitable small business of your own?  Need to maximize your income?  Looking for a part-time opportunity with unlimited upside potential? Know lots of people who are great selling or know lots of freelancers, consultants, or small business owners? Becoming a <a href="http://affiliate.breeasy.com/master-affiliate-signup">Breeasy Master Affiliate</a> is just for you.  You can earn commissions of up to 50% on new paid subscriptions and 40% on paid renewals.  Plus, you can recruit you own sub-affiliates and sales representatives and earn from every subscription <em>they sell</em>.  Some conditions apply.  <a href="http://affiliate.breeasy.com/master-affiliate-earnings-calculator">How Much Can I Earn as a Master Affiliate?</a></p>			
 			
-			<h2 class='section_header'>Earn with Breeasy!</h2><p> Want to make some extra money referring Breeasy to your customers or advertise Breeasy on your website or newsletter? <a href="http://affiliate.breeasy.com/affiliate-home">Free Affiliate Program now available!</a>  You can earn commissions of up to 40% on new paid subscribers and 30% on paid renewals.  Some conditions apply.  See <a href="http://affiliate.breeasy.com/affiliate-home">Breeasy Affiliate Program </a> for details.</p>
+			<h2 class='section_header'>Earn with Breeasy!</h2><p> Want to make some extra money referring Breeasy to your customers or advertise Breeasy on your website or newsletter? <a href="http://affiliate.breeasy.com/affiliate-home">Free Affiliate Program now available!</a>  You can earn commissions of up to 35% on new paid subscribers and 25% on paid renewals.  Some conditions apply.  See <a href="http://affiliate.breeasy.com/affiliate-home">Breeasy Affiliate Program </a> for details and start earning today.</p>
 		
-		<h2 class='section_header'>White Label Progam</h2>
+		<h2 class='section_header'>White Label Program</h2>
 		<p>Looking to run your own web business?  Do you have or manage an existing business and are looking to add additional apps and services that add value to your current offerings?  White Label Breeasy could be your answer.</p>
 	        <ul class="features">
 	        <li>Unique Instance of Breeasy for Business (i.e. your-company.breeasy.com or www.yourdomain.com)</li>
